# crem_uv

./: .gitignore  .readthedocs.yml  AGENTS.md  README.md  pyproject.toml  repomix-output.md  repomix.sh
example/: crem_api.ipynb  test_api.py
src/crem/: api.py
src/crem/cli/: crem_add_prop.py  frag_to_env_mp.py  fragmentation.py  guacamol_crem_test.py  import_env_to_db.py  main_optuna_crem.py
src/crem/core/: cremold.py  fragmentation.py  functions.py  operations.py  replacement.py
src/crem/utils/: mol_context.py  utils.py
